--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,23 @@
 body {
-  margin: 0;
+  width: 100%;
+  min-height: 594px;
+  display: flex;
+  justify-content: center;
   padding: 0;
-
   font-size: 14px;
   line-height: 20px;
-  font-family: "Roboto", "Verdana", sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #000000;
-  background-color: #E3E5E1;
-
-}
-
-.wrapper {
   background: url(../img/bgimage.png) no-repeat 0 0;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
 
 .container {
-  width: 1300px;
-  margin: 0 auto;
+  align-items: center;
+  width: 1440px;
+  margin-left: 179px;
   padding: 0;
 
   background: url(../img/office.png) no-repeat 700px 120px;
@@ -26,9 +27,7 @@ body {
 .about-us {
   width: 500px;
   min-height: 400px;
-  padding-left: 90px;
   padding-top: 150px;
-
 }
 
 .about-us h1 {
@@ -66,4 +65,97 @@ body {
 
 .btn:active {
   background-color: #D9D9D9;
+}
+.modal-window {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.modal-window__overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
+}
+.modal-window__body {
+  text-align: center;
+  background-color: #FFFFFF;
+  border-radius: 19px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 70px 95px;
+}
+.modal-window__title {
+  padding-bottom: 40px;
+}
+input {
+  display: block;
+  width: 550px;
+  height: 54px;
+  border: 1px solid #c4c4c4;
+  border-radius: 15px;
+  background-color: #f9f9f9;
+  padding: 0 23px;
+  margin: 44px 0;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  text-decoration: none;
+  text-transform: none;
+  color: #787878;
+}
+form button {
+  background: #6C8474;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.28);
+  border-radius: 54.5px;
+  border: none;
+  color: white;
+  padding: 20px 60px;
+  font-size: 20px;
+}
+#send-button {
+  text-align: center;
+  cursor: pointer;
+}
+#send-button:hover {
+  background: white;
+  color: black;
+  transition: 0.3s all;
+}
+
+.modal-window {
+
+}
+
+.modal-window.open .modal-window__overlay,
+.modal-window.open .modal-window__body {
+  opacity: 1;
+  z-index: 200;
+}
+.modal-window__body, .modal-window__overlay {
+  opacity: 0;
+  z-index: -1;
+}
+
+.success::after {
+  color: green;
+  content: "Данные успешно отправлены"
+  
+}
+.error::after {
+  color: red;
+  content: "Ошибка при отправке"
+}
+.validation-error::after {
+  color: red;
+  content: "Вы ничего не ввели"
 }
